Add more mempool filters

--- a/services/knots/bitcoin.conf
+++ b/services/knots/bitcoin.conf
@@ -1,11 +1,14 @@
-# ---- P2P ----
+# ---- p2p ----
+chain=main
 server=1
 listen=1
 discover=1
 bind=0.0.0.0
 port=8333
+networkactive=1
+maxconnections=125
 
-# ---- Tor ----
+# ---- tor ----
 listenonion=1
 onion=172.28.0.2:9050
 proxy=172.28.0.2:9050
@@ -23,16 +26,32 @@ rpcport=8332
 rpcallowip=172.28.0.1
 rpcallowip=172.28.0.5
 
-# ---- history ----
+# ---- blockchain ----
 prune=0
-blockfilterindex=1
+blocksxor=1
 txindex=1
-dbcache=1000
+blockfilterindex=1
+coinstatsindex=1
 peerbloomfilters=0
+peerblockfilters=1
+dbcache=1024
 
 # ---- mempool ----
+datacarrier=0
 datacarriersize=0
 acceptnonstddatacarrier=0
 acceptnonstdtxn=0
+mempooltruc=accept
+permitbaremultisig=0
+permitbarepubkey=0
+rejectparasites=1
+rejecttokens=1
+spkreuse=allow
+mempoolreplacement=fee,-optin
+mempoolfullrbf=1
 minrelaytxfee=0.0000001
 incrementalrelayfee=0.0000001
+blockmintxfee=0.0000001
+dustrelayfee=0
+mempoolexpiry=0
+persistmempool=0
